--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "newapp",
   "version": "1.0.0",
   "main": "index.js",
+  "proxy":"http://localhost:3000",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +13,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "email-validator": "^2.0.4",
     "express": "^4.21.2",
